# WhatsAppRAG

./: .gitignore  README.md  app.py  pyproject.toml
docs/: chunking.md
tests/: test_app_gradio.py  test_gemini_config.py  test_gemini_embeddings.py  test_ingest_pooling.py  test_ingest_safety.py  test_litellm_chat_config.py  test_model_config.py  test_whatsapp_parsing.py
whatsapp_rag/: __init__.py  answer.py  embeddings.py  ingest.py  model_config.py  safety.py  whatsapp.py
